--- a/careers/posts/2023/05/11/chatgpt-data-science-pt1.qmd
+++ b/careers/posts/2023/05/11/chatgpt-data-science-pt1.qmd
@@ -1,7 +1,7 @@
 ---
 title: How is ChatGPT changing data science?
 description: |
-  We sit down with the Royal Statistical Society’s Data Science and AI Section to hear how large language models are becoming part of the data science toolkit – and what this new development means for data science teams and skillsets.        
+  We sit down with the Royal Statistical Society’s Data Science and AI Section to hear how large language models are becoming part of the data science toolkit, and to consider what this new development means for data science teams and skillsets.        
 categories:
   - Large language models
   - AI
