--- a/index.qmd
+++ b/index.qmd
@@ -16,7 +16,7 @@ listing:
     - /careers
     - /viewpoints
     - "!index.qmd"
-    - "!stephanie-hare.qmd"
+    - "!chatgpt-data-science-pt1.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -111,15 +111,15 @@ toc: false
 ---
 ::: {.content-container}
 ::: {.top-story .purple-background}
-<a href="/viewpoints/interviews/posts/04/28/stephanie-hare.qmd">
+<a href="/careers/posts/2023/05/11/chatgpt-data-science-pt1.qmd">
 
 ::: grid
 ::: {.g-col-12 .g-col-lg-4 .top-story-text}
-## Stephanie Hare on why we need a culture of technology ethics
-The author of *Technology is Not Neutral* talks to Real World Data Science about the 'wicked problem' of technology and AI ethics, and why laws and regulations are 'necessary but insufficient' to minimise harms. 'We’re going to have to inculcate an entire new mindset,' she argues.
+## How is ChatGPT changing data science?
+We sit down with the Royal Statistical Society’s Data Science and AI Section to hear how large language models are becoming part of the data science toolkit, and to consider what this new development means for data science teams and skillsets.
 :::
 ::: {.g-col-12 .g-col-lg-8 .top-story-img}
-![](viewpoints/interviews/posts/04/28/images/stephanie-hare-bw.png)
+![](careers/posts/2023/05/11/images/chatgpt-homescreen.png)
 :::
 :::
 
@@ -158,11 +158,11 @@ Welcome to the home of **Real World Data Science**, a new project from the [Roya
 ::: {.pullout-block .black-background}
 ![](images/quote-purple.png){width="100px"}
 
-## This is a story of making opportunity out of crisis, of the interaction between not just theory of change and technical implementation, but the 'political' process of negotiating these changes with stakeholders in a manner that led to better decisions. 
-Noah Wright on 'The politics of performance measurement'
+## Quetelet’s emphasis on discovering the universal laws he believed govern social and biological phenomenon has not endured. But data scientists continue to appropriate laws from one area of science to study another.
+Jonathan Auerbach on the law of the flowering plants
 
 ::: {.button .button1}
-[Read the article](careers/posts/2023/04/18/politics-of-performance-measurement.qmd)
+[Try the tutorial](ideas/tutorials/posts/2023/04/13/flowers.qmd)
 :::
 
 :::
@@ -200,11 +200,11 @@ Noah Wright on 'The politics of performance measurement'
 ::: {.pullout-block .black-background}
 ![](images/quote-purple.png){width="100px"}
 
-## Quetelet’s emphasis on discovering the universal laws he believed govern social and biological phenomenon has not endured. But data scientists continue to appropriate laws from one area of science to study another.
-Jonathan Auerbach on the law of the flowering plants
+## This is a story of making opportunity out of crisis, of the interaction between not just theory of change and technical implementation, but the 'political' process of negotiating these changes with stakeholders in a manner that led to better decisions. 
+Noah Wright on 'The politics of performance measurement'
 
 ::: {.button .button1}
-[Try the tutorial](ideas/tutorials/posts/2023/04/13/flowers.qmd)
+[Read the article](careers/posts/2023/04/18/politics-of-performance-measurement.qmd)
 :::
 
 :::
