--- a/case-studies/posts/2023/05/XX/01-food-for-thought.qmd
+++ b/case-studies/posts/2023/05/XX/01-food-for-thought.qmd
@@ -26,8 +26,18 @@ But what if machine learning can help? That question inspired a competition, the
 This special collection of articles tells the story of the Food for Thought Challenge. We begin by exploring the [policy issues](link) that drive the development of the PPC – the need to understand the national diet, developing healthy diet plans, and costing up those plans – and the issues posed by record linkage. Next, we learn about [the nature of the challenge and the structure of the competition in more detail](link), and then the [three](link) [winning](link) [teams](link) walk us through their solutions. We end the collection with some closing thoughts on [the value of competitions for addressing data scientific challenges in the public sector](link).
 
 <!-- Create fwd/bk buttons for navigation? -->
+::: grid
+::: {.g-col-12 .g-col-md-6}
 ::: article-btn
-[Find more Interviews](/viewpoints/interviews/index.qmd)
+[Find more case studies](/case-studies/index.qmd)
+:::
+:::
+
+::: {.g-col-12 .g-col-md-6}
+::: article-btn
+[Part 1: The Purchase to Plate Suite &rarr;](/case-studies/posts/2023/05/XX/02-policy-and-research.qmd)
+:::
+:::
 :::
 
 ::: further-info
@@ -36,9 +46,7 @@ This special collection of articles tells the story of the Food for Thought Chal
 About the authors
 : **Brian Tarran** is editor of Real World Data Science, and head of data science platform at the Royal Statistical Society.
 
-: **Julia Lane** is a professor at the NYU Wagner Graduate School of Public Service and a NYU Provostial Fellow for Innovation Analytics. She co-founded the Coleridge Initiative, whose goal is to use data to transform the way governments access and use data for the social good through training programs, research projects and a secure data facility.
-
-She currently serves on the Advisory Committee on Data for Evidence Building and the National AI Research Resources Task Force.
+: **Julia Lane** is a professor at the NYU Wagner Graduate School of Public Service and a NYU Provostial Fellow for Innovation Analytics. She co-founded the Coleridge Initiative, whose goal is to use data to transform the way governments access and use data for the social good through training programs, research projects and a secure data facility. She currently serves on the Advisory Committee on Data for Evidence Building and the National AI Research Resources Task Force.
 :::
 
 ::: {.g-col-12 .g-col-md-6}
