--- a/case-studies/posts/2023/05/XX/02-policy-and-research.qmd
+++ b/case-studies/posts/2023/05/XX/02-policy-and-research.qmd
@@ -63,14 +63,36 @@ Of the four parts of the PPS, establishing the matches is the most time-consumin
 
 ::: {.g-col-12 .g-col-md-6}
 ::: article-btn
-[Part 2: Competition and challenge design &rarr;](/case-studies/posts/2023/05/XX/02-policy-and-research.qmd)
+[Part 2: Competition design &rarr;](/case-studies/posts/2023/05/XX/02-policy-and-research.qmd)
 :::
 :::
 :::
 
 **Acknowledgements:** The research presented in this compendium supports the Purchase to Plate Suite of data products. Carlson has been privileged to both develop and lead this project over the course of her career, but it is not a solo project. Many thanks to the Linkages Team from USDA’s Economic Research Service (Christopher Lowe, Mark Denbaly Elina Page, and Catherine Cullinane Thomas) the Center for Nutrition Policy and Promotion (Kristin Koegel, Kevin Kuczynski, Kevin Meyers Mathieu, TusaRebecca Pannucci), and our contractor Westat, Inc. (Thea Palmer Zimmerman, Carina E. Tornow, Amber Brown McFadden, Caitlin Carter, Viji Narayanaswamy, Lindsay McDougal, Elisha Lubar, Lynnea Brumby, Raquel Brown, and Maria Tamburri). Many others have supported this project over the years.
 
+::: further-info
+::: grid
+::: {.g-col-12 .g-col-md-12}
+About the authors
+: **Andrea Carlson** is an economist in the Food Markets Branch of the Food Economics Division in USDA’s Economic Research Service. She is the project lead for the Purchase to Plate Suite, which allows users to import USDA nutrient and food composition data into retail food scanner data acquired by USDA, and estimate individual food prices for dietary intake data.
 
+: **Thea Palmer Zimmerman** is a senior study director and research nutritionist at Westat.
+
+:::
+::: {.g-col-12 .g-col-md-6}
+Copyright and licence
+:   © 2023 Andrea Carlson and Thea Palmer Zimmerman
+
+<a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> <img src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1" style="height:22px!important;vertical-align:text-bottom;"/><img src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1" style="height:22px!important;margin-left:3px;vertical-align:text-bottom;"/></a> This article is licensed under a Creative Commons Attribution 4.0 (CC BY 4.0) <a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> International licence</a>.
+
+:::
+
+::: {.g-col-12 .g-col-md-6}
+How to cite
+:   Carlson, Andrea, and Thea Palmer Zimmerman. 2023. "Food for Thought: The importance of the Purchase to Plate Suite." Real World Data Science, May XX, 2023. [URL](https://realworlddatascience.net/viewpoints/case-studies/posts/2023/05/XX/02-purchase-to-plate.html)
+:::
+:::
+:::
 
 <!-- Build references.bib for article collection -->
 
